--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Argha Guha",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "validator": "^13.15.0"
