--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Argha Guha",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.830.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.0"
   }
 }
